project/logs/20250618_153257log
Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel:12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3D.VS.hlsl,profile:vs_6_0

Compile Succeeded,path:Object3D.VS.hlsl,profile:vs_6_0

Begin CompileShader,path:Object3D.PS.hlsl,profile:ps_6_0

Object3D.PS.hlsl:12:5: error: unknown type name 'flaot32_t3'
    flaot32_t3 direction;
    ^

